--- a/src/Pages/Login/login.css
+++ b/src/Pages/Login/login.css
@@ -1,73 +1,78 @@
-.input-text{
+.main-container {
+    width: 350px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid #BFCDE0;
+    padding-bottom: 25px;
+}
+
+
+.input-textt {
     padding: 7px 20px;
     width: 220px;
-    margin-bottom: 30px;
+    margin-top: 30px;
     border: 1px solid #BFCDE0;
 }
 
-.button{
+.button {
     color: white;
     background-color: #40A9FF;
     border: none;
     padding: 7px 115px;
     border-radius: 2px;
-    margin-bottom: 10px;
 }
-.font-style{
+
+.font-style {
     font-size: 14px;
 }
 
-.remember-me-container{
+.remember-me-container {
+    margin-top: 10px;
     width: 300px;
     margin-left: 22px;
     display: flex;
     justify-content: space-around;
-    margin-top: 10px;
 
 }
 
-.upper{
-    margin-top: 30px;
-
-}
-
-.heading{
+.heading {
     color: #474545;
     margin-bottom: 20px;
     font-size: 30px;
     font-weight: 500;
 }
 
-.remember{
+.remember {
     margin-left: 5px;
 }
 
-.check-box{
+.check-box {
     margin-top: 0px;
 
 }
 
-.main-container{
-    width: 350px;
-    height: 370px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 1px solid #BFCDE0;
-}
-
-
-.sign-up{
+.sign-up {
     font-size: 14px;
     color: #40A9FF;
 }
 
-.forgot{
+.forgot {
     color: #40A9FF;
 }
 
-.sign-up{
+.sign-up {
     cursor: pointer;
     text-decoration: none;
+}
+
+.errorHandle {
+    font-size: 14px;
+    color: red;
+}
+
+.bottom-text{
+    margin-bottom: 15px;
+    text-align: left;
 }
